k8s/base/minio-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuoti-minio-console-ingress
  namespace: zuoti
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.njwjxy.cn
      http:
        paths:
          - path: /zuoti-minio-console(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: zuoti-minio
                port:
                  number: 9001
  tls:
    - hosts:
        - www.njwjxy.cn
      secretName: ingress-tls
